achievement template coded - storyboard and tableview   ( DOESN'T BUILD YET!)

--- a/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
@@ -20,27 +20,44 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFl-ZF-H4B">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7hV-LT-la5" userLabel="testview">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7hV-LT-la5" userLabel="ContentView">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2XT-mO-ZJW">
-                                                <rect key="frame" x="8" y="241" width="359" height="161"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2XT-mO-ZJW">
+                                                <rect key="frame" x="0.0" y="40" width="375" height="362"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="k9S-3V-Y4n">
-                                                        <rect key="frame" x="0.0" y="28" width="359" height="44"/>
+                                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="k9S-3V-Y4n" id="amb-yK-HmB">
-                                                            <rect key="frame" x="0.0" y="0.0" width="359" height="43.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
+                                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </tableViewCellContentView>
                                                     </tableViewCell>
                                                 </prototypes>
                                             </tableView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="testlabel2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zxo-vW-JVa">
-                                                <rect key="frame" x="8" y="587" width="359" height="36"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Oy-3z-AMn">
+                                                <rect key="frame" x="0.0" y="433" width="375" height="209"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="209" id="0tC-0X-b5R"/>
+                                                </constraints>
+                                                <prototypes>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="60" id="Jyo-XE-HQV">
+                                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jyo-XE-HQV" id="w5v-NL-PDG">
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </tableViewCellContentView>
+                                                    </tableViewCell>
+                                                </prototypes>
+                                            </tableView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This might interest you:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zxo-vW-JVa">
+                                                <rect key="frame" x="0.0" y="407" width="375" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -48,36 +65,31 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="1000" id="ZvF-oA-A8O"/>
+                                            <constraint firstAttribute="trailing" secondItem="2Oy-3z-AMn" secondAttribute="trailing" id="2Rw-YW-eCR"/>
+                                            <constraint firstAttribute="trailing" secondItem="Zxo-vW-JVa" secondAttribute="trailing" id="CPk-hg-W7d"/>
+                                            <constraint firstAttribute="trailing" secondItem="2Oy-3z-AMn" secondAttribute="trailing" id="Fji-i1-n4v"/>
+                                            <constraint firstItem="2XT-mO-ZJW" firstAttribute="top" secondItem="7hV-LT-la5" secondAttribute="top" constant="40" id="Gvy-QK-ZW7"/>
+                                            <constraint firstItem="2XT-mO-ZJW" firstAttribute="leading" secondItem="7hV-LT-la5" secondAttribute="leading" id="Vhk-AN-uYw"/>
+                                            <constraint firstItem="2Oy-3z-AMn" firstAttribute="leading" secondItem="7hV-LT-la5" secondAttribute="leading" id="Xpr-Yq-nPz"/>
+                                            <constraint firstItem="Zxo-vW-JVa" firstAttribute="leading" secondItem="7hV-LT-la5" secondAttribute="leading" id="ZTL-4q-Lye"/>
+                                            <constraint firstAttribute="bottom" secondItem="2Oy-3z-AMn" secondAttribute="bottom" constant="25" id="ZdB-Xk-m9l"/>
+                                            <constraint firstAttribute="height" priority="250" constant="1000" id="ZvF-oA-A8O"/>
+                                            <constraint firstItem="2Oy-3z-AMn" firstAttribute="top" secondItem="Zxo-vW-JVa" secondAttribute="bottom" constant="5" id="geM-OK-ftF"/>
+                                            <constraint firstAttribute="trailing" secondItem="2XT-mO-ZJW" secondAttribute="trailing" id="iIK-l7-F2e"/>
+                                            <constraint firstItem="2Oy-3z-AMn" firstAttribute="leading" secondItem="7hV-LT-la5" secondAttribute="leading" id="ic9-An-Bar"/>
+                                            <constraint firstItem="Zxo-vW-JVa" firstAttribute="top" secondItem="2XT-mO-ZJW" secondAttribute="bottom" constant="5" id="mrO-gU-PRO"/>
                                         </constraints>
                                     </view>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Oy-3z-AMn">
-                                        <rect key="frame" x="0.0" y="430" width="375" height="209"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="60" id="Jyo-XE-HQV">
-                                                <rect key="frame" x="0.0" y="28" width="375" height="60"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jyo-XE-HQV" id="w5v-NL-PDG">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                        </prototypes>
-                                    </tableView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="2Oy-3z-AMn" firstAttribute="leading" secondItem="xFl-ZF-H4B" secondAttribute="leading" id="K7e-p8-Lbj"/>
                                     <constraint firstAttribute="trailing" secondItem="7hV-LT-la5" secondAttribute="trailing" id="SEn-su-3rQ"/>
                                     <constraint firstAttribute="bottom" secondItem="7hV-LT-la5" secondAttribute="bottom" id="V4x-5i-XE5"/>
                                     <constraint firstItem="7hV-LT-la5" firstAttribute="leading" secondItem="xFl-ZF-H4B" secondAttribute="leading" id="abm-hJ-VtX"/>
                                     <constraint firstItem="7hV-LT-la5" firstAttribute="top" secondItem="xFl-ZF-H4B" secondAttribute="top" id="cOW-XF-aAU"/>
-                                    <constraint firstAttribute="bottom" secondItem="2Oy-3z-AMn" secondAttribute="bottom" constant="8" id="pKI-8d-QFs"/>
-                                    <constraint firstAttribute="trailing" secondItem="2Oy-3z-AMn" secondAttribute="trailing" id="xQ3-aM-I9x"/>
                                 </constraints>
                             </scrollView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="testlabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6rm-CY-41n">
-                                <rect key="frame" x="65" y="0.0" width="245" height="58"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This would be greatly beneficial for you:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6rm-CY-41n">
+                                <rect key="frame" x="0.0" y="20" width="375" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -87,7 +99,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="7hV-LT-la5" firstAttribute="width" secondItem="OS0-TG-EIW" secondAttribute="width" id="16N-yF-nec"/>
+                            <constraint firstItem="7hV-LT-la5" firstAttribute="width" secondItem="OS0-TG-EIW" secondAttribute="width" id="A9f-JF-ktr"/>
                             <constraint firstItem="xFl-ZF-H4B" firstAttribute="bottom" secondItem="A2l-Hu-Dxa" secondAttribute="bottom" id="Dfd-oP-mAw"/>
+                            <constraint firstItem="7hV-LT-la5" firstAttribute="width" secondItem="OS0-TG-EIW" secondAttribute="width" id="Jgj-ZC-UiX"/>
                             <constraint firstItem="xFl-ZF-H4B" firstAttribute="top" secondItem="A2l-Hu-Dxa" secondAttribute="top" id="akm-qX-FiM"/>
                             <constraint firstItem="xFl-ZF-H4B" firstAttribute="leading" secondItem="A2l-Hu-Dxa" secondAttribute="leading" id="gaK-3U-vYu"/>
                             <constraint firstItem="xFl-ZF-H4B" firstAttribute="trailing" secondItem="A2l-Hu-Dxa" secondAttribute="trailing" id="pLD-VD-CLU"/>
